@@ -14,7 +14,6 @@ $EM_CONF[$_EXTKEY] = [
             'typo3' => '13.4.0-13.4.99',
             'div2007' => '2.3.11-0.0.0',
             'rdct' => '3.2.0-0.0.0',
-            'typo3db_legacy' => '1.3.0-1.3.99',
             'mail' => '3.9.0-0.0.0'
         ],
         'conflicts' => [
@@ -22,8 +21,7 @@ $EM_CONF[$_EXTKEY] = [
         ],
         'suggests' => [
             'felogin' => '',
-            'static_info_tables' => '',
-            'mail' => '3.9.0-0.0.0',
+            'static_info_tables' => ''
         ],
     ],
 ];
