@@ -1,3 +1,6 @@
+2025-12-09 Franz Holzinger  <franz@ttproducts.de>
+    * fix dependencies. No typo3db_legacy is needed!
+
 2025-12-02 Franz Holzinger  <franz@ttproducts.de>
     * breaking mm table: Change the fields of uid_local and uid_foreign. The table fe_users uid is the uid_foreign of the mm table. This is done because the sys_category table works like this.
     * new feature: TCA category for sys_category tree.
